feat add/remove const-tasks

--- a/index.html
+++ b/index.html
@@ -33,14 +33,11 @@
   <aside class="const-tasks">
     <h2 class="completed-title">постоянные задачи</h2>
     <ul class="const-list">
-      <li class="const-item">
-        <span class="item-title">Мониторинг банкомата</span>
-        <span class="item-time">В 11:00</span>
-        <span class="item-time">В 11:00</span>
-        <button class="btn btn-delete"></button>
-      </li>
     </ul>
-    <button class="btn btn-add-const" ></button>
+    <form class="add-const">
+      <input class="input title-const" type="text" placeholder="Что нам предстоит?">
+      <button class="btn btn-add-const"></button>
+    </form>
   </aside>
 
   <script src="js/main.js"></script>
