--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a class="close-btn">&times;</a>
     <ul class="menu-items" >
       <li><a href="#todo">Планировщик</a></li>
+      <li><a href="#todo-completed">Выполнено</a></li>
       <li><a href="#timer">Таймер</a></li>
       <li><a href="#password">Менеджер паролей</a></li>
       <li><a href="#settings">Настройки</a></li>
@@ -25,8 +26,14 @@
   <section class="todo" id="todo">
     <form class="todo-form">
       <input class="input todo-input" type="text" placeholder="Что запомнить? 🙄">
+      <input class="input todo-date" type="date">
       <button class="btn btn-add"></button>
     </form>
+    <div class="todo-wrap">
+      <ul class="todo-list">
+
+      </ul>
+    </div>
   </section>
 
   <script src="script/main.js"></script>
